Fix data source files (they need to be {rrd<num>} tags which get replaced) for netsnmp.cpuUsage report

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -2207,12 +2207,12 @@ report.netsnmp.cpuUsage.command=--title="CPU Usage" \
  --height 200 \
  --upper-limit 100 \
  -l 0 \
- DEF:cpuinterrupt=CpuRawInterrupt.rrd:CpuRawInterrupt:AVERAGE \
- DEF:cpuuser=CpuRawUser.rrd:CpuRawUser:AVERAGE \
- DEF:cpuwait=CpuRawWait.rrd:CpuRawWait:AVERAGE \
- DEF:cpunice=CpuRawNice.rrd:CpuRawNice:AVERAGE \
- DEF:cpusystem=CpuRawSystem.rrd:CpuRawSystem:AVERAGE \
- DEF:cpukernel=CpuRawKernel.rrd:CpuRawKernel:AVERAGE \
+ DEF:cpuinterrupt={rrd1}:CpuRawInterrupt:AVERAGE \
+ DEF:cpuuser={rrd2}:CpuRawUser:AVERAGE \
+ DEF:cpuwait={rrd3}:CpuRawWait:AVERAGE \
+ DEF:cpunice={rrd4}:CpuRawNice:AVERAGE \
+ DEF:cpusystem={rrd5}:CpuRawSystem:AVERAGE \
+ DEF:cpukernel={rrd6}:CpuRawKernel:AVERAGE \
  CDEF:interrupt=cpuinterrupt \
  CDEF:system=cpusystem,interrupt,+ \
  CDEF:wait=cpuwait,system,+ \
