--- a/tools/packages/opennms/opennms.spec.in
+++ b/tools/packages/opennms/opennms.spec.in
@@ -86,6 +86,24 @@
 %define platform_match  true
 %endif
 
+%if "%{platform}" == "linux-i386-fedora-5"
+%define initdir         /etc
+%define psql_service    postgresql
+%define requires        postgresql-server >= 7.2
+%define webapp_requires tomcat4 >= 4.1.18
+%define release_pkg     %{release}_fc5
+%define platform_match  true
+%endif
+
+%if "%{platform}" == "linux-i386-fedora-6"
+%define initdir         /etc
+%define psql_service    postgresql
+%define requires        postgresql-server >= 7.2
+%define webapp_requires tomcat4 >= 4.1.18
+%define release_pkg     %{release}_fc6
+%define platform_match  true
+%endif
+
 %if "%{platform}" == "linux-i386-mandrake-7"
 %define	initdir		/etc
 %define psql_service	postgresql
