update log4j.properties to use ${opennms.logs.dir} to describe log location so no filtering necessary

--- a/opennms-webapp/src/main/resources/log4j.properties
+++ b/opennms-webapp/src/main/resources/log4j.properties
@@ -31,7 +31,7 @@ log4j.rootCategory=DEBUG, UNCATEGORIZED
 log4j.appender.UNCATEGORIZED=org.apache.log4j.RollingFileAppender
 log4j.appender.UNCATEGORIZED.MaxFileSize=100MB
 log4j.appender.UNCATEGORIZED.MaxBackupIndex=4
-log4j.appender.UNCATEGORIZED.File=@install.logs.dir@/uncategorized.log
+log4j.appender.UNCATEGORIZED.File=${opennms.logs.dir}/uncategorized.log
 log4j.appender.UNCATEGORIZED.layout=org.apache.log4j.PatternLayout
 log4j.appender.UNCATEGORIZED.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 
@@ -47,7 +47,7 @@ log4j.additivity.OpenNMS.Eventd=false
 log4j.appender.EVENTD=org.apache.log4j.RollingFileAppender
 log4j.appender.EVENTD.MaxFileSize=100MB
 log4j.appender.EVENTD.MaxBackupIndex=4
-log4j.appender.EVENTD.File=@install.logs.dir@/eventd.log
+log4j.appender.EVENTD.File=${opennms.logs.dir}/eventd.log
 log4j.appender.EVENTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.EVENTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
@@ -57,7 +57,7 @@ log4j.additivity.OpenNMS.Discovery=false
 log4j.appender.DISCOVERY=org.apache.log4j.RollingFileAppender
 log4j.appender.DISCOVERY.MaxFileSize=100MB
 log4j.appender.DISCOVERY.MaxBackupIndex=4
-log4j.appender.DISCOVERY.File=@install.logs.dir@/discovery.log
+log4j.appender.DISCOVERY.File=${opennms.logs.dir}/discovery.log
 log4j.appender.DISCOVERY.layout=org.apache.log4j.PatternLayout
 log4j.appender.DISCOVERY.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -67,7 +67,7 @@ log4j.additivity.OpenNMS.Capsd=false
 log4j.appender.CAPSD=org.apache.log4j.RollingFileAppender
 log4j.appender.CAPSD.MaxFileSize=100MB
 log4j.appender.CAPSD.MaxBackupIndex=4
-log4j.appender.CAPSD.File=@install.logs.dir@/capsd.log
+log4j.appender.CAPSD.File=${opennms.logs.dir}/capsd.log
 log4j.appender.CAPSD.layout=org.apache.log4j.PatternLayout
 log4j.appender.CAPSD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -77,7 +77,7 @@ log4j.additivity.OpenNMS.Notifd=false
 log4j.appender.NOTIFD=org.apache.log4j.RollingFileAppender
 log4j.appender.NOTIFD.MaxFileSize=100MB
 log4j.appender.NOTIFD.MaxBackupIndex=4
-log4j.appender.NOTIFD.File=@install.logs.dir@/notifd.log
+log4j.appender.NOTIFD.File=${opennms.logs.dir}/notifd.log
 log4j.appender.NOTIFD.layout=org.apache.log4j.PatternLayout
 log4j.appender.NOTIFD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -87,7 +87,7 @@ log4j.additivity.OpenNMS.Poller=false
 log4j.appender.POLLERS=org.apache.log4j.RollingFileAppender
 log4j.appender.POLLERS.MaxFileSize=100MB
 log4j.appender.POLLERS.MaxBackupIndex=4
-log4j.appender.POLLERS.File=@install.logs.dir@/poller.log
+log4j.appender.POLLERS.File=${opennms.logs.dir}/poller.log
 log4j.appender.POLLERS.layout=org.apache.log4j.PatternLayout
 log4j.appender.POLLERS.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -97,7 +97,7 @@ log4j.additivity.OpenNMS.Collectd=false
 log4j.appender.COLLECTD=org.apache.log4j.RollingFileAppender
 log4j.appender.COLLECTD.MaxFileSize=100MB
 log4j.appender.COLLECTD.MaxBackupIndex=4
-log4j.appender.COLLECTD.File=@install.logs.dir@/collectd.log
+log4j.appender.COLLECTD.File=${opennms.logs.dir}/collectd.log
 log4j.appender.COLLECTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.COLLECTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -107,7 +107,7 @@ log4j.additivity.OpenNMS.Threshd=false
 log4j.appender.THRESHD=org.apache.log4j.RollingFileAppender
 log4j.appender.THRESHD.MaxFileSize=100MB
 log4j.appender.THRESHD.MaxBackupIndex=4
-log4j.appender.THRESHD.File=@install.logs.dir@/threshd.log
+log4j.appender.THRESHD.File=${opennms.logs.dir}/threshd.log
 log4j.appender.THRESHD.layout=org.apache.log4j.PatternLayout
 log4j.appender.THRESHD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -117,7 +117,7 @@ log4j.additivity.OpenNMS.Trapd=false
 log4j.appender.TRAPD=org.apache.log4j.RollingFileAppender
 log4j.appender.TRAPD.MaxFileSize=100MB
 log4j.appender.TRAPD.MaxBackupIndex=4
-log4j.appender.TRAPD.File=@install.logs.dir@/trapd.log
+log4j.appender.TRAPD.File=${opennms.logs.dir}/trapd.log
 log4j.appender.TRAPD.layout=org.apache.log4j.PatternLayout
 log4j.appender.TRAPD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
@@ -127,7 +127,7 @@ log4j.additivity.OpenNMS.Actiond=false
 log4j.appender.ACTIOND=org.apache.log4j.RollingFileAppender
 log4j.appender.ACTIOND.MaxFileSize=100MB
 log4j.appender.ACTIOND.MaxBackupIndex=4
-log4j.appender.ACTIOND.File=@install.logs.dir@/actiond.log
+log4j.appender.ACTIOND.File=${opennms.logs.dir}/actiond.log
 log4j.appender.ACTIOND.layout=org.apache.log4j.PatternLayout
 log4j.appender.ACTIOND.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -137,7 +137,7 @@ log4j.additivity.OpenNMS.Scriptd=false
 log4j.appender.SCRIPTD=org.apache.log4j.RollingFileAppender
 log4j.appender.SCRIPTD.MaxFileSize=100MB
 log4j.appender.SCRIPTD.MaxBackupIndex=4
-log4j.appender.SCRIPTD.File=@install.logs.dir@/scriptd.log
+log4j.appender.SCRIPTD.File=${opennms.logs.dir}/scriptd.log
 log4j.appender.SCRIPTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.SCRIPTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -147,7 +147,7 @@ log4j.additivity.OpenNMS.RTCManager=false
 log4j.appender.RTC=org.apache.log4j.RollingFileAppender
 log4j.appender.RTC.MaxFileSize=100MB
 log4j.appender.RTC.MaxBackupIndex=4
-log4j.appender.RTC.File=@install.logs.dir@/rtc.log
+log4j.appender.RTC.File=${opennms.logs.dir}/rtc.log
 log4j.appender.RTC.layout=org.apache.log4j.PatternLayout
 log4j.appender.RTC.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
@@ -157,7 +157,7 @@ log4j.additivity.POSTDATALOG=false
 log4j.appender.RTCDATA=org.apache.log4j.RollingFileAppender
 log4j.appender.RTCDATA.MaxFileSize=100MB
 log4j.appender.RTCDATA.MaxBackupIndex=4
-log4j.appender.RTCDATA.File=@install.logs.dir@/rtcdata.log
+log4j.appender.RTCDATA.File=${opennms.logs.dir}/rtcdata.log
 log4j.appender.RTCDATA.layout=org.apache.log4j.PatternLayout
 log4j.appender.RTCDATA.layout.ConversionPattern=%m
  
@@ -167,7 +167,7 @@ log4j.additivity.OpenNMS.Outage=false
 log4j.appender.OUTAGE=org.apache.log4j.RollingFileAppender
 log4j.appender.OUTAGE.MaxFileSize=100MB
 log4j.appender.OUTAGE.MaxBackupIndex=4
-log4j.appender.OUTAGE.File=@install.logs.dir@/outage.log
+log4j.appender.OUTAGE.File=${opennms.logs.dir}/outage.log
 log4j.appender.OUTAGE.layout=org.apache.log4j.PatternLayout
 log4j.appender.OUTAGE.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -177,7 +177,7 @@ log4j.additivity.OpenNMS.EventTranslator=false
 log4j.appender.TRANSLATOR=org.apache.log4j.RollingFileAppender
 log4j.appender.TRANSLATOR.MaxFileSize=100MB
 log4j.appender.TRANSLATOR.MaxBackupIndex=4
-log4j.appender.TRANSLATOR.File=@install.logs.dir@/translator.log
+log4j.appender.TRANSLATOR.File=${opennms.logs.dir}/translator.log
 log4j.appender.TRANSLATOR.layout=org.apache.log4j.PatternLayout
 log4j.appender.TRANSLATOR.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -187,7 +187,7 @@ log4j.additivity.OpenNMS.Vacuumd=false
 log4j.appender.VACUUM=org.apache.log4j.RollingFileAppender
 log4j.appender.VACUUM.MaxFileSize=100MB
 log4j.appender.VACUUM.MaxBackupIndex=4
-log4j.appender.VACUUM.File=@install.logs.dir@/vacuumd.log
+log4j.appender.VACUUM.File=${opennms.logs.dir}/vacuumd.log
 log4j.appender.VACUUM.layout=org.apache.log4j.PatternLayout
 log4j.appender.VACUUM.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -197,7 +197,7 @@ log4j.additivity.OpenNMS.Manager=false
 log4j.appender.MANAGER=org.apache.log4j.RollingFileAppender
 log4j.appender.MANAGER.MaxFileSize=100MB
 log4j.appender.MANAGER.MaxBackupIndex=4
-log4j.appender.MANAGER.File=@install.logs.dir@/manager.log
+log4j.appender.MANAGER.File=${opennms.logs.dir}/manager.log
 log4j.appender.MANAGER.layout=org.apache.log4j.PatternLayout
 log4j.appender.MANAGER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
@@ -209,7 +209,7 @@ log4j.additivity.org.opennms.web=false
 log4j.appender.WEB=org.apache.log4j.RollingFileAppender
 log4j.appender.WEB.MaxFileSize=100MB
 log4j.appender.WEB.MaxBackupIndex=4
-log4j.appender.WEB.File=@install.logs.dir@/web.log
+log4j.appender.WEB.File=${opennms.logs.dir}/web.log
 log4j.appender.WEB.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEB.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -219,7 +219,7 @@ log4j.additivity.OpenNMS.WEB.AUTH=false
 log4j.appender.WEBAUTH=org.apache.log4j.RollingFileAppender
 log4j.appender.WEBAUTH.MaxFileSize=2MB
 log4j.appender.WEBAUTH.MaxBackupIndex=2
-log4j.appender.WEBAUTH.File=@install.logs.dir@/webauth.log
+log4j.appender.WEBAUTH.File=${opennms.logs.dir}/webauth.log
 log4j.appender.WEBAUTH.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEBAUTH.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -229,7 +229,7 @@ log4j.additivity.OpenNMS.WEB.RTC=false
 log4j.appender.WEBRTC=org.apache.log4j.RollingFileAppender
 log4j.appender.WEBRTC.MaxFileSize=2MB
 log4j.appender.WEBRTC.MaxBackupIndex=2
-log4j.appender.WEBRTC.File=@install.logs.dir@/web-rtc.log
+log4j.appender.WEBRTC.File=${opennms.logs.dir}/web-rtc.log
 log4j.appender.WEBRTC.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEBRTC.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -239,7 +239,7 @@ log4j.additivity.OpenNMS.Dhcpd=false
 log4j.appender.DHCPD=org.apache.log4j.RollingFileAppender
 log4j.appender.DHCPD.MaxFileSize=100MB
 log4j.appender.DHCPD.MaxBackupIndex=4
-log4j.appender.DHCPD.File=@install.logs.dir@/dhcpd.log
+log4j.appender.DHCPD.File=${opennms.logs.dir}/dhcpd.log
 log4j.appender.DHCPD.layout=org.apache.log4j.PatternLayout
 log4j.appender.DHCPD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -249,7 +249,7 @@ log4j.additivity.OpenNMS.Vulnscand=false
 log4j.appender.VULNSCAND=org.apache.log4j.RollingFileAppender
 log4j.appender.VULNSCAND.MaxFileSize=50MB
 log4j.appender.VULNSCAND.MaxBackupIndex=4
-log4j.appender.VULNSCAND.File=@install.logs.dir@/vulnscand.log
+log4j.appender.VULNSCAND.File=${opennms.logs.dir}/vulnscand.log
 log4j.appender.VULNSCAND.layout=org.apache.log4j.PatternLayout
 log4j.appender.VULNSCAND.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -259,7 +259,7 @@ log4j.additivity.OpenNMS.Syslogd=false
 log4j.appender.SYSLOGD=org.apache.log4j.RollingFileAppender
 log4j.appender.SYSLOGD.MaxFileSize=100MB
 log4j.appender.SYSLOGD.MaxBackupIndex=4
-log4j.appender.SYSLOGD.File=@install.logs.dir@/syslogd.log
+log4j.appender.SYSLOGD.File=${opennms.logs.dir}/syslogd.log
 log4j.appender.SYSLOGD.layout=org.apache.log4j.PatternLayout
 log4j.appender.SYSLOGD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -269,7 +269,7 @@ log4j.additivity.OpenNMS.Xmlrpcd=false
 log4j.appender.XMLRPCD=org.apache.log4j.RollingFileAppender
 log4j.appender.XMLRPCD.MaxFileSize=100MB
 log4j.appender.XMLRPCD.MaxBackupIndex=4
-log4j.appender.XMLRPCD.File=@install.logs.dir@/xmlrpcd.log
+log4j.appender.XMLRPCD.File=${opennms.logs.dir}/xmlrpcd.log
 log4j.appender.XMLRPCD.layout=org.apache.log4j.PatternLayout
 log4j.appender.XMLRPCD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -279,7 +279,7 @@ log4j.additivity.ModelImporter=false
 log4j.appender.IMPORTER=org.apache.log4j.RollingFileAppender
 log4j.appender.IMPORTER.MaxFileSize=100MB
 log4j.appender.IMPORTER.MaxBackupIndex=4
-log4j.appender.IMPORTER.File=@install.logs.dir@/importer.log
+log4j.appender.IMPORTER.File=${opennms.logs.dir}/importer.log
 log4j.appender.IMPORTER.layout=org.apache.log4j.PatternLayout
 log4j.appender.IMPORTER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -289,7 +289,7 @@ log4j.additivity.OpenNMS.Report=false
 log4j.appender.REPORT=org.apache.log4j.RollingFileAppender
 log4j.appender.REPORT.MaxFileSize=1MB
 log4j.appender.REPORT.MaxBackupIndex=2
-log4j.appender.REPORT.File=@install.logs.dir@/report.log
+log4j.appender.REPORT.File=${opennms.logs.dir}/report.log
 log4j.appender.REPORT.layout=org.apache.log4j.PatternLayout
 log4j.appender.REPORT.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -298,7 +298,7 @@ log4j.additivity.jmx=false
 log4j.appender.JMX=org.apache.log4j.RollingFileAppender
 log4j.appender.JMX.MaxFileSize=1MB
 log4j.appender.JMX.MaxBackupIndex=2
-log4j.appender.JMX.File=@install.logs.dir@/jmx.log
+log4j.appender.JMX.File=${opennms.logs.dir}/jmx.log
 log4j.appender.JMX.layout=org.apache.log4j.PatternLayout
 log4j.appender.JMX.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -310,7 +310,7 @@ log4j.additivity.org.apache.coyote=false
 log4j.appender.TOMCAT-INTERNAL=org.apache.log4j.RollingFileAppender
 log4j.appender.TOMCAT-INTERNAL.MaxFileSize=100MB
 log4j.appender.TOMCAT-INTERNAL.MaxBackupIndex=2
-log4j.appender.TOMCAT-INTERNAL.File=@install.logs.dir@/tomcat-internal.log
+log4j.appender.TOMCAT-INTERNAL.File=${opennms.logs.dir}/tomcat-internal.log
 log4j.appender.TOMCAT-INTERNAL.layout=org.apache.log4j.PatternLayout
 log4j.appender.TOMCAT-INTERNAL.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 
@@ -320,7 +320,7 @@ log4j.additivity.OpenNMS.Linkd=false
 log4j.appender.LINKS=org.apache.log4j.RollingFileAppender
 log4j.appender.LINKS.MaxFileSize=100MB
 log4j.appender.LINKS.MaxBackupIndex=4
-log4j.appender.LINKS.File=@install.logs.dir@/link.log
+log4j.appender.LINKS.File=${opennms.logs.dir}/link.log
 log4j.appender.LINKS.layout=org.apache.log4j.PatternLayout
 log4j.appender.LINKS.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
@@ -330,7 +330,7 @@ log4j.additivity.OpenNMS.Map=false
 log4j.appender.MAP=org.apache.log4j.RollingFileAppender
 log4j.appender.MAP.MaxFileSize=100MB
 log4j.appender.MAP.MaxBackupIndex=4
-log4j.appender.MAP.File=@install.logs.dir@/web-map.log
+log4j.appender.MAP.File=${opennms.logs.dir}/web-map.log
 log4j.appender.MAP.layout=org.apache.log4j.PatternLayout
 log4j.appender.MAP.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
