--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -1,5 +1,6 @@
 opennms.home=@install.dir@/
 opennms.bin.dir=@install.bin.dir@
+opennms.logs.dir=@install.logs.dir@
 java.awt.headless=true
 opennms.db.poolman=org.opennms.core.resource.db.SimpleDbConnectionFactory
 opennms.db.driver=@install.database.driver@
