Add -Wall and -Werror to C compiler options so we catch more errors at compile time instead of causing odd problems at run time.  Bug #1719.  Reviewed by joed.

--- a/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
@@ -28,7 +28,7 @@
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -O -D__DARWIN__ ${build.jni.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O -D__DARWIN__ ${build.jni.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
