--- a/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-linux/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-linux/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -O -D__LINUX__ ${build.jni.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O -D__LINUX__ ${build.jni.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
