--- a/opennms-iplike/opennms-iplike-freebsd/pom.xml
+++ b/opennms-iplike/opennms-iplike-freebsd/pom.xml
@@ -17,7 +17,7 @@
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -O ${build.postgresql.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O ${build.postgresql.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
