--- a/opennms-iplike/opennms-iplike-linux/pom.xml
+++ b/opennms-iplike/opennms-iplike-linux/pom.xml
@@ -17,7 +17,7 @@
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -O -D__LINUX__ ${build.postgresql.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O -D__LINUX__ ${build.postgresql.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
