--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-freebsd/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-freebsd/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -O ${build.jni.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O ${build.jni.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
