--- a/opennms-daemon/src/main/resources/contrib/qosdaemon/qos_example_configuration/opennms/log4j.properties
+++ b/opennms-daemon/src/main/resources/contrib/qosdaemon/qos_example_configuration/opennms/log4j.properties
@@ -1,4 +1,9 @@
-# v3.0 C Gallen based on openoss 1.3.2-CANDIDATE version 4744 appended QoSD/ QoSDrx log configuration
+# v3.1 	Example log configuration for OSS/J interface
+#	Author : C Gallen
+#       based on openoss 1.3.2-CANDIDATE version 5190 
+#       Appended QoSD/ QoSDrx log configuration. 
+#	Turned all other logging configurations to INFO
+#       Note QoSD and QoSDrx DEBUG logs are VERY verbose
 
 
 # Log4j Configuration
@@ -30,7 +35,7 @@
 #   The uncategorized log is the catch-all for all Log4j output
 #   that is not appended elsewhere.
 
-log4j.rootCategory=DEBUG, UNCATEGORIZED
+log4j.rootCategory=INFO, UNCATEGORIZED
 log4j.appender.UNCATEGORIZED=org.apache.log4j.RollingFileAppender
 log4j.appender.UNCATEGORIZED.MaxFileSize=100MB
 log4j.appender.UNCATEGORIZED.MaxBackupIndex=4
@@ -41,11 +46,11 @@ log4j.appender.UNCATEGORIZED.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 # Turn logging down on particularly version packages
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
-log4j.logger.org.hibernate.sql=DEBUG
+log4j.logger.org.hibernate.sql=INFO
 
 
 # Eventd
-log4j.category.OpenNMS.Eventd=DEBUG, EVENTD
+log4j.category.OpenNMS.Eventd=INFO, EVENTD
 log4j.additivity.OpenNMS.Eventd=false
 log4j.appender.EVENTD=org.apache.log4j.RollingFileAppender
 log4j.appender.EVENTD.MaxFileSize=100MB
@@ -55,7 +60,7 @@ log4j.appender.EVENTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.EVENTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
 # Discovery
-log4j.category.OpenNMS.Discovery=DEBUG, DISCOVERY
+log4j.category.OpenNMS.Discovery=INFO, DISCOVERY
 log4j.additivity.OpenNMS.Discovery=false
 log4j.appender.DISCOVERY=org.apache.log4j.RollingFileAppender
 log4j.appender.DISCOVERY.MaxFileSize=100MB
@@ -65,7 +70,7 @@ log4j.appender.DISCOVERY.layout=org.apache.log4j.PatternLayout
 log4j.appender.DISCOVERY.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Capsd
-log4j.category.OpenNMS.Capsd=DEBUG, CAPSD
+log4j.category.OpenNMS.Capsd=INFO, CAPSD
 log4j.additivity.OpenNMS.Capsd=false
 log4j.appender.CAPSD=org.apache.log4j.RollingFileAppender
 log4j.appender.CAPSD.MaxFileSize=100MB
@@ -75,7 +80,7 @@ log4j.appender.CAPSD.layout=org.apache.log4j.PatternLayout
 log4j.appender.CAPSD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Notifd
-log4j.category.OpenNMS.Notifd=DEBUG, NOTIFD
+log4j.category.OpenNMS.Notifd=INFO, NOTIFD
 log4j.additivity.OpenNMS.Notifd=false
 log4j.appender.NOTIFD=org.apache.log4j.RollingFileAppender
 log4j.appender.NOTIFD.MaxFileSize=100MB
@@ -85,7 +90,7 @@ log4j.appender.NOTIFD.layout=org.apache.log4j.PatternLayout
 log4j.appender.NOTIFD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Pollers
-log4j.category.OpenNMS.Poller=DEBUG, POLLERS
+log4j.category.OpenNMS.Poller=INFO, POLLERS
 log4j.additivity.OpenNMS.Poller=false
 log4j.appender.POLLERS=org.apache.log4j.RollingFileAppender
 log4j.appender.POLLERS.MaxFileSize=100MB
@@ -95,7 +100,7 @@ log4j.appender.POLLERS.layout=org.apache.log4j.PatternLayout
 log4j.appender.POLLERS.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Collectd
-log4j.category.OpenNMS.Collectd=DEBUG, COLLECTD
+log4j.category.OpenNMS.Collectd=INFO, COLLECTD
 log4j.additivity.OpenNMS.Collectd=false
 log4j.appender.COLLECTD=org.apache.log4j.RollingFileAppender
 log4j.appender.COLLECTD.MaxFileSize=100MB
@@ -105,7 +110,7 @@ log4j.appender.COLLECTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.COLLECTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Threshd 
-log4j.category.OpenNMS.Threshd=DEBUG, THRESHD
+log4j.category.OpenNMS.Threshd=INFO, THRESHD
 log4j.additivity.OpenNMS.Threshd=false
 log4j.appender.THRESHD=org.apache.log4j.RollingFileAppender
 log4j.appender.THRESHD.MaxFileSize=100MB
@@ -115,7 +120,7 @@ log4j.appender.THRESHD.layout=org.apache.log4j.PatternLayout
 log4j.appender.THRESHD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Trapd
-log4j.category.OpenNMS.Trapd=DEBUG, TRAPD
+log4j.category.OpenNMS.Trapd=INFO, TRAPD
 log4j.additivity.OpenNMS.Trapd=false
 log4j.appender.TRAPD=org.apache.log4j.RollingFileAppender
 log4j.appender.TRAPD.MaxFileSize=100MB
@@ -125,7 +130,7 @@ log4j.appender.TRAPD.layout=org.apache.log4j.PatternLayout
 log4j.appender.TRAPD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
 # Actiond
-log4j.category.OpenNMS.Actiond=DEBUG, ACTIOND
+log4j.category.OpenNMS.Actiond=INFO, ACTIOND
 log4j.additivity.OpenNMS.Actiond=false
 log4j.appender.ACTIOND=org.apache.log4j.RollingFileAppender
 log4j.appender.ACTIOND.MaxFileSize=100MB
@@ -135,7 +140,7 @@ log4j.appender.ACTIOND.layout=org.apache.log4j.PatternLayout
 log4j.appender.ACTIOND.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Scriptd
-log4j.category.OpenNMS.Scriptd=DEBUG, SCRIPTD
+log4j.category.OpenNMS.Scriptd=INFO, SCRIPTD
 log4j.additivity.OpenNMS.Scriptd=false
 log4j.appender.SCRIPTD=org.apache.log4j.RollingFileAppender
 log4j.appender.SCRIPTD.MaxFileSize=100MB
@@ -145,7 +150,7 @@ log4j.appender.SCRIPTD.layout=org.apache.log4j.PatternLayout
 log4j.appender.SCRIPTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # RTC
-log4j.category.OpenNMS.RTCManager=DEBUG, RTC
+log4j.category.OpenNMS.RTCManager=INFO, RTC
 log4j.additivity.OpenNMS.RTCManager=false
 log4j.appender.RTC=org.apache.log4j.RollingFileAppender
 log4j.appender.RTC.MaxFileSize=100MB
@@ -155,7 +160,7 @@ log4j.appender.RTC.layout=org.apache.log4j.PatternLayout
 log4j.appender.RTC.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
 # RTC post data log (do not change conversion pattern)
-log4j.category.POSTDATALOG=DEBUG, RTCDATA
+log4j.category.POSTDATALOG=INFO, RTCDATA
 log4j.additivity.POSTDATALOG=false
 log4j.appender.RTCDATA=org.apache.log4j.RollingFileAppender
 log4j.appender.RTCDATA.MaxFileSize=100MB
@@ -165,7 +170,7 @@ log4j.appender.RTCDATA.layout=org.apache.log4j.PatternLayout
 log4j.appender.RTCDATA.layout.ConversionPattern=%m
  
 # OutageManager
-log4j.category.OpenNMS.Outage=DEBUG, OUTAGE
+log4j.category.OpenNMS.Outage=INFO, OUTAGE
 log4j.additivity.OpenNMS.Outage=false
 log4j.appender.OUTAGE=org.apache.log4j.RollingFileAppender
 log4j.appender.OUTAGE.MaxFileSize=100MB
@@ -175,7 +180,7 @@ log4j.appender.OUTAGE.layout=org.apache.log4j.PatternLayout
 log4j.appender.OUTAGE.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # EventTranslator
-log4j.category.OpenNMS.EventTranslator=DEBUG, TRANSLATOR
+log4j.category.OpenNMS.EventTranslator=INFO, TRANSLATOR
 log4j.additivity.OpenNMS.EventTranslator=false
 log4j.appender.TRANSLATOR=org.apache.log4j.RollingFileAppender
 log4j.appender.TRANSLATOR.MaxFileSize=100MB
@@ -185,7 +190,7 @@ log4j.appender.TRANSLATOR.layout=org.apache.log4j.PatternLayout
 log4j.appender.TRANSLATOR.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Vacuumd
-log4j.category.OpenNMS.Vacuumd=DEBUG, VACUUM
+log4j.category.OpenNMS.Vacuumd=INFO, VACUUM
 log4j.additivity.OpenNMS.Vacuumd=false
 log4j.appender.VACUUM=org.apache.log4j.RollingFileAppender
 log4j.appender.VACUUM.MaxFileSize=100MB
@@ -195,7 +200,7 @@ log4j.appender.VACUUM.layout=org.apache.log4j.PatternLayout
 log4j.appender.VACUUM.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Manager
-log4j.category.OpenNMS.Manager=DEBUG, MANAGER
+log4j.category.OpenNMS.Manager=INFO, MANAGER
 log4j.additivity.OpenNMS.Manager=false
 log4j.appender.MANAGER=org.apache.log4j.RollingFileAppender
 log4j.appender.MANAGER.MaxFileSize=100MB
@@ -205,9 +210,9 @@ log4j.appender.MANAGER.layout=org.apache.log4j.PatternLayout
 log4j.appender.MANAGER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
 # Web UI (main)
-log4j.category.OpenNMS.WEB=DEBUG, WEB
+log4j.category.OpenNMS.WEB=INFO, WEB
 log4j.additivity.OpenNMS.WEB=false
-log4j.category.org.opennms.web=DEBUG, WEB
+log4j.category.org.opennms.web=INFO, WEB
 log4j.additivity.org.opennms.web=false
 log4j.appender.WEB=org.apache.log4j.RollingFileAppender
 log4j.appender.WEB.MaxFileSize=100MB
@@ -217,7 +222,7 @@ log4j.appender.WEB.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEB.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Web UI (Authentication)
-log4j.category.OpenNMS.WEB.AUTH=DEBUG, WEBAUTH
+log4j.category.OpenNMS.WEB.AUTH=INFO, WEBAUTH
 log4j.additivity.OpenNMS.WEB.AUTH=false
 log4j.appender.WEBAUTH=org.apache.log4j.RollingFileAppender
 log4j.appender.WEBAUTH.MaxFileSize=2MB
@@ -227,7 +232,7 @@ log4j.appender.WEBAUTH.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEBAUTH.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Web UI (RTC communication)
-log4j.category.OpenNMS.WEB.RTC=DEBUG, WEBRTC
+log4j.category.OpenNMS.WEB.RTC=INFO, WEBRTC
 log4j.additivity.OpenNMS.WEB.RTC=false
 log4j.appender.WEBRTC=org.apache.log4j.RollingFileAppender
 log4j.appender.WEBRTC.MaxFileSize=2MB
@@ -237,7 +242,7 @@ log4j.appender.WEBRTC.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEBRTC.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # DHCP daemon server
-log4j.category.OpenNMS.Dhcpd=DEBUG, DHCPD
+log4j.category.OpenNMS.Dhcpd=INFO, DHCPD
 log4j.additivity.OpenNMS.Dhcpd=false
 log4j.appender.DHCPD=org.apache.log4j.RollingFileAppender
 log4j.appender.DHCPD.MaxFileSize=100MB
@@ -247,7 +252,7 @@ log4j.appender.DHCPD.layout=org.apache.log4j.PatternLayout
 log4j.appender.DHCPD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Vulnerability scanning daemon
-log4j.category.OpenNMS.Vulnscand=DEBUG, VULNSCAND
+log4j.category.OpenNMS.Vulnscand=INFO, VULNSCAND
 log4j.additivity.OpenNMS.Vulnscand=false
 log4j.appender.VULNSCAND=org.apache.log4j.RollingFileAppender
 log4j.appender.VULNSCAND.MaxFileSize=50MB
@@ -257,7 +262,7 @@ log4j.appender.VULNSCAND.layout=org.apache.log4j.PatternLayout
 log4j.appender.VULNSCAND.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Syslogd
-log4j.category.OpenNMS.Syslogd=DEBUG, SYSLOGD
+log4j.category.OpenNMS.Syslogd=INFO, SYSLOGD
 log4j.additivity.OpenNMS.Syslogd=false
 log4j.appender.SYSLOGD=org.apache.log4j.RollingFileAppender
 log4j.appender.SYSLOGD.MaxFileSize=100MB
@@ -267,7 +272,7 @@ log4j.appender.SYSLOGD.layout=org.apache.log4j.PatternLayout
 log4j.appender.SYSLOGD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Xmlrpcd
-log4j.category.OpenNMS.Xmlrpcd=DEBUG, XMLRPCD
+log4j.category.OpenNMS.Xmlrpcd=INFO, XMLRPCD
 log4j.additivity.OpenNMS.Xmlrpcd=false
 log4j.appender.XMLRPCD=org.apache.log4j.RollingFileAppender
 log4j.appender.XMLRPCD.MaxFileSize=100MB
@@ -277,7 +282,7 @@ log4j.appender.XMLRPCD.layout=org.apache.log4j.PatternLayout
 log4j.appender.XMLRPCD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # ModelImporter
-log4j.category.ModelImporter=DEBUG, IMPORTER
+log4j.category.ModelImporter=INFO, IMPORTER
 log4j.additivity.ModelImporter=false
 log4j.appender.IMPORTER=org.apache.log4j.RollingFileAppender
 log4j.appender.IMPORTER.MaxFileSize=100MB
@@ -287,7 +292,7 @@ log4j.appender.IMPORTER.layout=org.apache.log4j.PatternLayout
 log4j.appender.IMPORTER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Report
-log4j.category.OpenNMS.Report=DEBUG, REPORT
+log4j.category.OpenNMS.Report=INFO, REPORT
 log4j.additivity.OpenNMS.Report=false
 log4j.appender.REPORT=org.apache.log4j.RollingFileAppender
 log4j.appender.REPORT.MaxFileSize=1MB
@@ -296,7 +301,7 @@ log4j.appender.REPORT.File=/opt/OpenNMS/logs/report.log
 log4j.appender.REPORT.layout=org.apache.log4j.PatternLayout
 log4j.appender.REPORT.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
-log4j.category.jmx=DEBUG, JMX
+log4j.category.jmx=INFO, JMX
 log4j.additivity.jmx=false
 log4j.appender.JMX=org.apache.log4j.RollingFileAppender
 log4j.appender.JMX.MaxFileSize=1MB
@@ -318,7 +323,7 @@ log4j.appender.TOMCAT-INTERNAL.layout=org.apache.log4j.PatternLayout
 log4j.appender.TOMCAT-INTERNAL.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 
 # Linkd
-log4j.category.OpenNMS.Linkd=DEBUG, LINKS
+log4j.category.OpenNMS.Linkd=INFO, LINKS
 log4j.additivity.OpenNMS.Linkd=false
 log4j.appender.LINKS=org.apache.log4j.RollingFileAppender
 log4j.appender.LINKS.MaxFileSize=100MB
@@ -328,7 +333,7 @@ log4j.appender.LINKS.layout=org.apache.log4j.PatternLayout
 log4j.appender.LINKS.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Map
-log4j.category.OpenNMS.Map=DEBUG, MAP
+log4j.category.OpenNMS.Map=INFO, MAP
 log4j.additivity.OpenNMS.Map=false
 log4j.appender.MAP=org.apache.log4j.RollingFileAppender
 log4j.appender.MAP.MaxFileSize=100MB
@@ -337,7 +342,7 @@ log4j.appender.MAP.File=/opt/OpenNMS/logs/web-map.log
 log4j.appender.MAP.layout=org.apache.log4j.PatternLayout
 log4j.appender.MAP.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
-# QoS daemon server
+# QoS daemon
 log4j.category.OpenOSS.QoSD=INFO, QOSD
 log4j.additivity.OpenOSS.QoSD=false
 log4j.appender.QOSD=org.apache.log4j.RollingFileAppender
@@ -347,7 +352,7 @@ log4j.appender.QOSD.File=/opt/OpenNMS/logs/qosd.log
 log4j.appender.QOSD.layout=org.apache.log4j.PatternLayout
 log4j.appender.QOSD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
-# QoSrx daemon server
+# QoSrx daemon
 log4j.category.OpenOSS.QoSDrx=INFO, QOSDRX
 log4j.additivity.OpenOSS.QoSDrx=false
 log4j.appender.QOSDRX=org.apache.log4j.RollingFileAppender
