--- a/opennms-dao/src/test/resources/log4j.properties
+++ b/opennms-dao/src/test/resources/log4j.properties
@@ -51,7 +51,8 @@ log4j.logger.org.apache.commons.digester.Digester=INFO
 log4j.logger.org.acegisecurity=INFO
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
-log4j.logger.org.hibernate.sql=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.persister.entity.AbstractEntityPersister=INFO
 log4j.logger.org.apache.catalina.session.ManagerBase=INFO
 
 
